<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <id.faizalempe.wangku.util.view.WangkuViewFlipper
        android:id="@+id/flipper_transaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                app:title="@string/transaction_title"
                app:titleTextAppearance="@style/WangkuText.H1.B"
                app:titleTextColor="@color/color_on_primary"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/linear_transaction_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginVertical="@dimen/_5sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/toolbar_transaction">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/WangkuText.P.B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/transaction_total_label" />

                    <TextView
                        android:id="@+id/tv_transaction_total"
                        style="@style/WangkuText.P"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="Rp0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/WangkuText.P.B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/transaction_income_label"
                        android:textColor="@android:color/holo_green_dark" />

                    <TextView
                        android:id="@+id/tv_transaction_income"
                        style="@style/WangkuText.P"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="Rp0"
                        android:textColor="@android:color/holo_green_dark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/WangkuText.P.B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/transaction_expense_label"
                        android:textColor="@android:color/holo_red_light" />

                    <TextView
                        android:id="@+id/tv_transaction_expense"
                        style="@style/WangkuText.P"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="Rp0"
                        android:textColor="@android:color/holo_red_light" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transaction"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/linear_transaction_balance"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/item_transaction" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_transaction_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_general_add"
                app:tint="@color/white"
                android:backgroundTint="@color/color_primary"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </id.faizalempe.wangku.util.view.WangkuViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>